<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Main -->
    
    <string name="app_name">Kernel Settings</string>
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="owner">This App was developed by David \"Firtecy\" Laprell!</string>
    <string name="link">Thanks pengus77 and MinoochX for helping me out and testing the Beta releases</string>
    <string name="nosupport">No Supported Kernel/Device</string>
    <string name="settings">Settings</string>
    <string name="restore">Restore settings at boot</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- About -->
    <string name="close">Close</string>

    <string name="about_body"><![CDATA[
        <i><b>Supported Kernels:</b></i><br>
        - <a href="http://forum.xda-developers.com/showthread.php?t=2276560">ARC Reactor</a> by MinoochX <br/>
        - <a href="http://forum.xda-developers.com/showthread.php?t=2097788">Kowalski Kernel</a> by pengus77<br />
		<br/>
		
        <i><b>Big Thanks to:</b></i><br>
        - <a href="http://forum.xda-developers.com/member.php?u=3783116">pengus77</a><br/>
        - <a href="http://forum.xda-developers.com/member.php?u=5127299">MinoochX</a><br/>
        - <a href="http://forum.xda-developers.com/member.php?u=3605868">Tonyp</a>
        <br/>
        
		<i><b>Developed by:</b></i>
        <i><a href="http://forum.xda-developers.com/member.php?u=5124291">Firtecy</a></i><br><br>
    ]]></string>
    
    <string name="app_name_and_version" translatable="false"><![CDATA[
        <b>Kernel Settings</b>&nbsp;<font color="#888888">v%1$s</font>
    ]]></string>
    
    <!-- Settings -->
    
    <string name="permormanceRestore">Performance Settings</string>
    <string name="pRBoot">Restore Performance Settings at boot</string>
    <string name="app_settings">App Settings</string>
    <string name="restore_settings">Restore Settings</string>
    <string name="rSBoot">Restore settings at boot</string>
    <string name="vertifyKernel">Verify Kernel</string>
    <string name="vKBoot">Verify Kernel first on boot</string>
    <string name="changeTheme">Change theme</string>
    <string name="darklight">Dark/Light</string>
    <string name="lowMemory">Use Low Memory</string>
    <string name="lMSummary">Let the App use less RAM, but need more Performance</string>
    
    <!-- Categorys -->

    <string name="Wlan">Wireless Lan</string>
    <string name="Brightness">Brightness</string>
    <string name="Volume">Volume</string>
    <string name="Charge">Charging</string>
    <string name="Misc">Miscellaneous</string>
    <string name="Performance">Performance</string>

    <!-- Modules -->

    <string name="PSP">Power Save Polling</string>
    <string name="HPM">Hotspot Power Management</string>
    <string name="ASO">Awake (Screen on) Management</string>
    <string name="TX">Tx Power</string>
    <string name="SLED">SoftKey LED Brightness</string>
    <string name="AutoB">Automatic Display Brightness</string>
    <string name="Speaker">Speaker</string>
    <string name="Headphone">Headphone</string>
    <string name="FCharge">Fast Charge</string>
    <string name="DFsync">Dynamic FSync</string>
    <string name="SCM">Single Core Mode</string>
    <string name="TCP">TCP Congestion Algorithm</string>
    <string name="ALCT">ALC Table</string>
    <string name="IntRA">Internal SD - Read ahead (in kB)</string>
    <string name="ExtRA">External SD - Read ahead (in kB)</string>

    <!-- Descriptions -->

    <string name="TX_DES">Be careful, not all the routers are happy with all the values.</string>
    <string name="FCharge_DES">WARNING!: Don\'t keep it active when connected to a PC or it may damage your usb ports. It\'s meant for fast charging when using car/plane adapters for example</string>
    <string name="ALCTable_DES">The ALC Table is the scaling Table for Auto Brightness. On the left are the Values the Lightsensor returns(in LUX) the ones on the right are the ALS brightness values!</string>
    <string name="boot_message_notification_title_template">Boot message: %1$s</string>
    <string name="boot_message_notification_placeholder_text_template">You said %1$s and lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis. Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec tortor.</string>
    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>

</resources>
